prevent scrollbars from showing unless nescessary

--- a/co-modals.scss
+++ b/co-modals.scss
@@ -33,7 +33,7 @@
         &> div > div {
             display: none;
         }
-        
+
         // Start of the animation
         &.coModal-add {
             display: table;
@@ -106,7 +106,7 @@
         &> div {
             display: table-cell;
             vertical-align: middle;
-            
+
             // For firefox if we want to specify % widths and heights for content
             width: 100%;
             height: 100%;
@@ -117,7 +117,7 @@
         }
     }
 
-        
+
     @media only screen and (max-width: $mobile-breakpoint) {
         modal > div > div {
             width: $mobile-width !important;
@@ -127,8 +127,8 @@
     modal > div > div {
         position: relative;
         max-height: 100%;
-        overflow: scroll;
-        
+        overflow: auto;
+
         background-color: $body-background;
         padding-bottom: 20px;
         width: $desktop-width;
